# robot-nav-portfolio-3d

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  swarm.yaml  swarm_large.yaml
models/: obstacle_mlp.json
navsim3d/: cli.py  collision3d.py  control3d.py  costmap3d.py  dynamic3d.py  learned_pred.py  map3d.py  planner3d.py  sim3d.py  swarm3d.py  swarm_cli.py  viz3d.py
reports/: baseline_compare_agg.csv  comm_delay.csv  comm_delay_agg.csv  comm_dropout.csv  comm_dropout_agg.csv  dynamic_sweep.csv  dynamic_sweep_agg.csv  dynamic_sweep_predictive.csv  dynamic_sweep_predictive_agg.csv  large_scale_agg.csv  predict_horizon_agg.csv  scale_sweep.csv  scale_sweep_agg.csv
ros2/navsim3d_ros/: package.xml  setup.cfg  setup.py
ros2/navsim3d_ros/navsim3d_ros/: swarm_node.py
ros2/navsim3d_ros/resource/: navsim3d_ros
scripts/: plot_swarm_results.py  run_experiments.py  train_obstacle_predictor.py
