<?xml version="1.0"?>
<package format="3">
  <name>navsim3d_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for navsim3d swarm visualization.</description>
  <maintainer email="navsim3d@example.com">navsim3d</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
